Fix launch audio timing and remove shifting blue rocket detail.
Made-with: Cursor

--- a/styles.css
+++ b/styles.css
@@ -901,16 +901,6 @@ body {
   border: 3px solid #0f0f1a;
 }
 
-.pixel-window {
-  position: absolute;
-  left: 40px;
-  top: 50px;
-  width: 30px;
-  height: 30px;
-  background: #4169e1;
-  border: 3px solid #0f0f1a;
-}
-
 .pixel-body-stripe {
   position: absolute;
   left: 25px;
@@ -1114,17 +1104,6 @@ body {
   width: 70px;
   height: 90px;
   background: #f0f0f0;
-  border: 3px solid #0f0f1a;
-}
-
-.blast-window {
-  position: absolute;
-  left: 50%;
-  top: 20px;
-  transform: translateX(-50%);
-  width: 30px;
-  height: 30px;
-  background: #4169e1;
   border: 3px solid #0f0f1a;
 }
 
